--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-          welcome to my  first web app
+          this is avinash of ece dpt
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
