--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-          this is avinash of ece dpt
+          hi!!...welcome to my first web page
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
