--- a/ui/index.html
+++ b/ui/index.html
@@ -7,6 +7,10 @@
         <div class="center">
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
+        <div>
+        <p>
+           i m avinash
+           </p>
         <hr>
         <br>
         <div class="center text-big bold">
