[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,8 @@
         <div>
         <p>
            i m avinash
-           </p>
+        </p>
+        </div>
         <hr>
         <br>
         <div class="center text-big bold">
