--- a/ui/index.html
+++ b/ui/index.html
@@ -4,6 +4,10 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <font>
+            color=red;
+            style=back slash;
+        </font>
         <div class="center">
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
