[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,16 +4,12 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <font>
-            color=red;
-            style=back slash;
-        </font>
         <div class="center">
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <div>
         <p>
-           i m avinash
+           <font color=red style=back_slash>i m avinash</font>
         </p>
         </div>
         <hr>
