[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <div>
         <p>
-           <font color=red style=back_slash>i m avinash</font>
+           <font color=red style=bauhouse>i m avinash</font>
         </p>
         </div>
         <hr>
